--- a/top.html
+++ b/top.html
@@ -2,6 +2,6 @@
 <title>topÆäÀÌÁö</title>
 </head>
 <body>
-<img src=한양대로고.jpg width=100% height=100%>
+<img src=https://www.hanyang.ac.kr/html-repositories/images/custom/common/logo.png width=100% height=100%>
 </body>
 </html> 
