--- a/left.html
+++ b/left.html
@@ -2,7 +2,7 @@
 <html lang="ko"><head>
 <meta charset="UTF-8>
 </head>
-<bodt bgcolor=blue>
+<body bgcolor=blue>
 <a href=right1.html target=right>
                무슨 일을 하나요
 </a><p>
