--- a/left.html
+++ b/left.html
@@ -6,7 +6,13 @@
 </head>
 <body bgcolor=blue>
 <a href=right1.html target=right>
-               무슨 일을 하나요
+             한양대 학과 소개
+</a><p>
+<a href=right1.html target=right>
+   약사가 하는  일
+</a>p> 
+<a href=right1.html target=right>
+  내가 약사가 되기 위해             
 </a><p>
 <a href=right2.html target=right>
                dhkdn
