--- a/left.html
+++ b/left.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="ko"><head>
-<meta charset="UTF-8>
+<meta charset="UTF-8">
 </head>
-<body bgcolor=blue>
-<a href=right1.html target=right> 한양대 학과 소개
+<body bgcolor=#00ff00>
+<a href=right1.html target=right> 한양대학과소개
 </a><p>
-<a href=right2.html target=right>약사가 하는  일
-</a>p> 
-<a href=right3.html target=right>내가 약사가 되기 위해             
+<a href=right2.html target=right>약사 하는일
+</a><p> 
+<a href=right3.html target=right>내가 약사가 되rl위해             
 </a><p>
 <a href=right4.html target=right> dhkdn
 </a>
