--- a/left.html
+++ b/left.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 </head>
 <body bgcolor=#00ff00>
-<a href=right1.html target=right> 한양대학과소개
+<a href=right1.html target=right> 한양대학소개
 </a><p>
 <a href=right2.html target=right>약사 하는일
 </a><p> 
