--- a/left.html
+++ b/left.html
@@ -3,9 +3,9 @@
 <meta charset="UTF-8">
 </head>
 <body bgcolor=#00ff00>
-<a href=right1.html target=right> 한양대학소개
+<a href=right1.html target=right> 한양대 약학과 목표
 </a><p>
-<a href=right2.html target=right>약사 하는일
+<a href=right2.html target=right>한양대 약화과에서 배우는 
 </a><p> 
 <a href=right3.html target=right>내가 약사가 되rl위해             
 </a><p>
