--- a/left.html
+++ b/left.html
@@ -5,9 +5,9 @@
 <body bgcolor=#00ff00>
 <a href=right1.html target=right> 한양대 화학공학과 소개
 </a><p>
-<a href=right2.html target=right>화학공학과 
+<a href=right3.html target=right>화학공학과에서 배우는 것들
 </a><p> 
-<a href=right3.html target=right>내가 약사가 되rl위해             
+<a href=right2.html target=right>화공과 나온 후              
 </a><p>
 <a href=right4.html target=right> dhkdn
 </a>
