--- a/left.html
+++ b/left.html
@@ -7,7 +7,7 @@
 </a><p>
 <a href=right3.html target=right>화학공학과에서 배우는 것들
 </a><p> 
-<a href=right2.html target=right>화공과 나온 후              
+<a href=right2.html target=right>화공과 나온 후 진로             
 </a><p>
 <a href=right4.html target=right> dhkdn
 </a>
