--- a/right2.html
+++ b/right2.html
@@ -38,7 +38,9 @@
  <p> 환경공학기술자, 대기환경기술자, 산업안전 및 위험관리원 등
  </td>
 </tr>
-
+ <tr>
+  <td><img src="화학과 나온 후 진로.png">
+</td></tr>
 </table>
 </body>
 </html> 
