--- a/right1.html
+++ b/right1.html
@@ -3,7 +3,10 @@
 </title></head>
 <body>
 <table border=1>
-<tr>
+<tr><td>
+<img src"화공과 소개.png">  
+</td></tr>
+  <tr>
 <td>
 학과소개<p>
 화학공학은 일상생활 속의 다양한 물질을 화학적, 물리적 조작을 통해 제조하고 가공하여 고부가가치 제품으로 변형 시키거나, 혼합, 반응, 분리, 정제과정 등을 통하여 인류생활을 윤택하게 하는 학문 분야입니다. 예를 들어 원유를 분리, 정제하여 휘발유, 아스팔트 등 각종 석유제품을 생산하는 정유공업, 나프타를 분해하여 각종 플라스틱, 고무 제품 및 화학섬유 등을 생산하는 석유화학공업, 탄소를 중심으로 수소, 산소, 질소 등을 함유한 화합물을 제조하는 유기화학공업 등이 모두 화학공업에 해당합니다.<p>
