--- a/left.html
+++ b/left.html
@@ -3,13 +3,15 @@
 <meta charset="UTF-8">
 </head>
 <body bgcolor=#00ff00>
+<a href=right4.html target=right>힌양대 소개
+</a><p>
 <a href=right1.html target=right> 한양대 화학공학과 소개
 </a><p>
 <a href=right3.html target=right>화학공학과에서 배우는 것들
 </a><p> 
 <a href=right2.html target=right>화공과 나온 후 진로             
 </a><p>
-<a href=right4.html target=right> dhkdn
+<a href=right4.html target=right>한양대 입학
 </a>
 </body>
 </html>
