--- a/left.html
+++ b/left.html
@@ -2,7 +2,7 @@
 <html lang="ko"><head>
 <meta charset="UTF-8">
 </head>
-<body bgcolor=blue>
+<body bgcolor=yellow>
 <a href=right4.html target=right>한양대 소개
 </a><p>
 <a href=right1.html target=right> 한양대 화학공학과 소개
